--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -1,8 +1,3 @@
----
-scripts:
-- homepage.js
----
-
 <!DOCTYPE html>
 <html>
 
@@ -12,7 +7,23 @@ scripts:
 
     {% include header.html %}
 
-    <div class="content"></div>
+    <h1 class="homepage__title">- Europe Auto Carrosserie -</h1>
+
+    <div id="homepage">
+      <nav>
+        <img id="homepage__logo" src="/img/logo-colored-metalic.png">
+        <ul id="homepage__nav">
+          <li class="nav__home"><a href="/">Accueil</a></li>
+          <li class="nav__about"><a href="/presentation">Présentation</a></li>
+          <li class="nav__services"><a href="/services">Services</a></li>
+          <li class="nav__skills"><a href="/galerie">Galerie</a></li>
+          <li class="nav__portfolio"><a href="/contact">Contact</a></li>
+        </ul>
+      </nav>
+
+      <h2 class="homepage__text-intro">Passion,<br>savoir-faire,<br>métier depuis plus de 30 ans...<br><span>By Bielli</span></h2>
+
+    </div>
 
     {% include footer.html scripts=layout.scripts %}
 
