--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -12,7 +12,7 @@
 
 
       <!-- <nav>
-        <img id="homepage__logo" src="/img/logo-europ-auto-phare.png">
+        <img id="homepage__logo" src="{{ baseurl }}/img/logo-europ-auto-phare.png">
         <ul id="homepage__nav">
           <li class="nav__home"><a href="/">Accueil</a></li>
           <li class="nav__about"><a href="/presentation">Présentation</a></li>
