--- a/_sass/_homepage.scss
+++ b/_sass/_homepage.scss
@@ -27,7 +27,7 @@
 
 #homepage {
   align-items: center;
-  background-image: url("/img/auto-darken.jpg");
+  background-image: url("../img/auto-darken.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
