--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -30,7 +30,7 @@
           <div class="icon icon--services"></div>
         </a>
         <a href="{{ site.baseurl }}">
-          <img id="nav__logo" src="{{ site.baseurl }}/img/logo-europ-auto-phare-vis.png">
+          <img id="nav__logo" src="img/logo-europ-auto-phare-vis.png">
         </a>
         <a href="{{ site.baseurl }}/galerie">
           <div class="icon icon--gallery"></div>
