--- a/_sass/_homepage.scss
+++ b/_sass/_homepage.scss
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Brushsci';
-    src: url("fonts/BRUSHSCI.ttf") format('truetype');
+    src: url("../fonts/BRUSHSCI.ttf") format('truetype');
 }
 
 .homepage__title {
