add gem autoprefixer

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,5 @@
 <nav>
-  <a href="{{ site.baseurl }}">
+  <a href="{{ site.baseurl }}/">
     <div class="icon icon--home"></div>
   </a>
   <a href="{{ site.baseurl }}/presentation">
