--- a/_layouts/presentation.html
+++ b/_layouts/presentation.html
@@ -7,7 +7,11 @@
 
   <body id="body-presentation">
 
-    <div style="position:absolute; display:flex; height:100%; width:100%; justify-content:center; align-items:center; font-size:20px; font-family:sans-serif">PAGE EN COURS DE CONSTRUCTION...</div>
+    <div class="kpis-banner">
+
+    </div>
+
+    <!-- <div style="position:absolute; display:flex; height:100%; width:100%; justify-content:center; align-items:center; font-size:20px; font-family:sans-serif">PAGE EN COURS DE CONSTRUCTION...</div> -->
 
   </body>
 
